# tku-aila

./: .gitignore  Dockerfile  README.md  VERSION.MD  bot.py  chat_tester.py  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: docker-build.yml
ai/: agents.py  tools.py
cogs/: commands.py  conversations.py  debug.py
concepts/: ai.py
lib/: checker.py
lib/ai/: __init__.py  agents.py  tools.py
tools/: acad_downloader.py
tools/acad/: __init__.py  downloader.py  processing.py
tools/db/: __init__.py  models.py
