[project]
name = "tku-aila"
version = "1.0.0rc1"
description = "A conversational AI Agent assistant designed to help Tamkang University students."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "langchain-sandbox>=0.0.3",
    "langgraph-checkpoint-redis>=0.2.1",
    "rarfile>=4.2",
]

[dependency-groups]
dev = []
